--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hooks-paginator": "^0.5.0",
     "react-i18next": "^12.0.0",
+    "react-icons": "^5.4.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-modal-video": "^2.0.2",
     "react-redux": "^8.1.3",
