--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "clsx": "^1.2.1",
     "cogo-toast": "https://github.com/hasanm95/cogo-toast",
     "dotenv": "^16.4.7",
+    "font-awesome": "^4.7.0",
     "google-map-react": "^2.2.0",
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
@@ -30,9 +31,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
     "yet-another-react-lightbox": "^2.2.0"
