--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "cogo-toast": "https://github.com/hasanm95/cogo-toast",
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.0.11",
     "google-map-react": "^2.2.0",
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "i18next-http-backend": "^2.0.1",
+    "lucide-react": "^0.474.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
