--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "i18next-http-backend": "^2.0.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
