--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^3.1.1",
     "animate.css": "^4.1.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
