--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/system": "^6.4.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^3.1.1",
     "animate.css": "^4.1.1",
