--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
