--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,14 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^3.1.1",
     "animate.css": "^4.1.1",
-    "axios": "^1.1.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.2.2",
     "clsx": "^1.2.1",
     "cogo-toast": "https://github.com/hasanm95/cogo-toast",
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.0.11",
+    "frontend-react": "file:",
     "google-map-react": "^2.2.0",
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
