--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api": "file:",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -21,10 +23,11 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "nodemailer-express-handlebars": "^7.0.0",
     "stripe": "^17.5.0",
     "uuid": "^11.0.5",
+    "validator": "^13.12.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
