--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,6 +84,8 @@
     "postcss": "^8.4.49",
     "redux-devtools-extension": "^2.13.8",
     "sass": "^1.29.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
