--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "react-visibility-sensor": "^5.1.1",
+    "recharts": "^2.15.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
