--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.2",
     "clsx": "^1.2.1",
     "cogo-toast": "https://github.com/hasanm95/cogo-toast",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.0.11",
