--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "i18next-http-backend": "^2.0.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
