--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cogo-toast": "https://github.com/hasanm95/cogo-toast",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.0.11",
     "google-map-react": "^2.2.0",
@@ -57,6 +58,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^2.2.0"
   },
   "scripts": {
