--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "react-tooltip": "^5.28.0",
     "react-visibility-sensor": "^5.1.1",
     "recharts": "^2.15.1",
     "redux": "^4.2.0",
